# corewar_okuzniet

./: CMakeLists.txt  Makefile  asm  author  corewar  kek.s  manual_corewar
asm_src/: Makefile  add_labels.c  analyze_arguments.c  analyze_labels.c  array_len.c  bonuses.c  check_binary_file.c  check_commands_and_labels.c  check_end_of_file.c  check_file_name.c  check_name_and_comment.c  error.c  get_arg_by_type.c  get_type.c  init_info.c  main.c  operations_coding.c  parse_command.c  print_champion_file.c  put_manual.c  reverse.c  trim_arguments.c
corewar_src/: Makefile  bonuses.c  character_count.c  check_bot.c  check_carriages.c  check_code_type.c  check_key.c  check_registers.c  close_visulization.c  copy_carriage_data.c  create_file.c  define_bots_id.c  draw_info_table.c  draw_map.c  draw_period.c  error.c  fill_map.c  find_opcode.c  ft_add.c  ft_aff.c  ft_and.c  ft_fork.c  ft_ld.c  ft_ldi.c  ft_lfork.c  ft_live.c  ft_lld.c  ft_lldi.c  ft_or.c  ft_st.c  ft_sti.c  ft_sub.c  ft_xor.c  ft_zjmp.c  get_arg_by_type.c  get_arg_from_map.c  get_arg_position.c  get_name_and_comment.c  get_size_by_type.c  get_type.c  (+22 more)
corewar_src/corewar_op/: op_live.c
frameworks/SDL2_mixer.framework/Versions/A/Headers/: SDL_mixer.h
includes/: asm.h  corewar.h  op.h  op_corewar.h
libft/: Makefile  ft_add.c  ft_atoi.c  ft_bubble_sort.c  ft_bzero.c  ft_find_specifiers.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_put_bigs.c  ft_putc.c  ft_putchar.c  ft_putchar_fd.c  ft_putd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putoux.c  ft_puts.c  ft_putstr.c  ft_putstr_fd.c  ft_select_type.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+30 more)
resources/: ex.cor  ex.s
